--- a/style.css
+++ b/style.css
@@ -98,3 +98,29 @@ body {
     margin-top: 80px;
     text-align: center;
 }
+@media (max-width: 768px) {
+    h1 {
+        font-size: 40px;
+        left: 50%;
+        top: 5%;
+    }
+
+    .container {
+        max-width: 90%;
+        padding: 10px;
+    }
+
+    .search-box input {
+        flex: 2;
+    }
+
+    .search-box button {
+        width: 100%;
+        padding: 10px 0;
+        font-size: 16px;
+    }
+
+    .word-example {
+        font-size: 14px;
+    }
+}
